# EJColorFlowerFactory

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/release/: app-release.apk  output.json
app/src/androidTest/java/com/box_tech/fireworksmachine/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/cn/box_tech/zhihuiyuan/zxing/: BarcodeEncoder.java
app/src/main/java/com/box_tech/fireworksmachine/: BLEManagerActivity.java  DeviceIdListAdapter.java  EditDeviceTodGroupActivity.java  MainActivity.java  MyApplication.java  MyLifecycleHandler.java  Settings.java
app/src/main/java/com/box_tech/fireworksmachine/device/: Device.java  DeviceConfig.java  DeviceListAdapter.java  DeviceState.java  DeviceView.java  ISendCommand.java  OnReceivePackage.java  Protocol.java
app/src/main/java/com/box_tech/fireworksmachine/login/: LoginActivity.java  LoginSession.java  PrepareGetVerifyCodeRequest.java  PrepareRequest.java  RegisterActivity.java  ResetPasswordActivity.java
app/src/main/java/com/box_tech/fireworksmachine/page/: DeviceConfigFragment.java  PageAdapter.java  (+1 more)
app/src/main/java/com/box_tech/sun_lcd/: SunLcd.java  Zlib.java
app/src/main/jni/: zlib-sunlcd-jni.cpp
app/src/main/res/drawable/: ic_button.xml  ic_control.xml  ic_control_selected.xml  ic_control_unselected.xml  ic_home.xml  ic_home_selected.xml  ic_home_unselected.xml  ic_my.xml  ic_my_selected.xml  ic_my_unselected.xml  ic_shop.xml  ic_shop_selected.xml  ic_shop_unselected.xml
app/src/main/res/layout/: activity_capture.xml  activity_edit_device_tod_group.xml  activity_login.xml  activity_main.xml  activity_register.xml  activity_reset_password.xml  activity_success_page.xml  add_group_item.xml  device_add_item.xml  device_address_item.xml  device_group_view.xml  device_id_item.xml  device_item_view.xml  device_list_dialog.xml  device_view.xml  edit_add_material.xml  edit_device_id.xml  edit_dmx.xml  edit_gualiao_time.xml  edit_jet.xml  edit_motor_speed.xml  edit_temperature_threshold.xml  fragment_my.xml  fragment_shop.xml  group_item.xml  page_device_config.xml  page_group.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/box_tech/fireworksmachine/: DeviceServerUnitTest.java  ExampleUnitTest.java  LoginUnitTest.java  SunLcdUnitTest.java
(+48 files in other folders)
